Arts & Crafts Changelog
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
V1.1.9
• Chalk now spawns more in mountains
• Chalk can now replace all blocks in the #minecraft:base_stone_overworld tag
• Gypsum now spawns in biomes with a Desert Temple
• Fixed Dyed Decorated Pots not dropping sherds
• Fixed Dyed Potted Fern not rendering properly
• Added Portuguese Brazilian translations
• Chalk Sticks now work while flying
• Fixed Dyed Potted Mangrove Propagule not rendering properly


V1.1.8
• Fixed Cork Log & Stripped Cork Log having the wrong sounds


V1.1.7
• Fixed all stonecutter slab recipes in the mod giving you the wrong amount of slabs
• Updated NeoForge Version and removed methods that are marked for removal




V1.1.6
• Fixed Glazed Terracotta Texture to allow for more patterns to be made
• Glazed Terracotta now has correct loot table and mining speed
• Updated NeoForge Version Again





V1.1.5
• Cork Sapling can now be used in the composter
• Cork Leaves can now be used in the composter
• da_dk Translations done by jquann1998!  (Thank you!)
• Updated NeoForge Version



V1.1.4-bugfix
• Fixed creative category causing a crash in creative mode




V1.1.4
Bug Fixes
• Fixed missing bleached chalk dust translation
Features
• Changed Paintbrush Recipe
• Added Russian translations (Thank you Arkoto & Clarthen!)




V1.1.3
Bug Fixes
• Fixed Dyed flower pots become normal after taking the flower out
• Updated NeoForge to fix a crash
Code Changes
• Removed unused code




V1.1.2
Bug Fixes
• Fixed Chalk Sticks not being in Creative Category for some people
• Fixed Chalk Sticks not showing up in JEI for some people!
Creative Category
• Chalk Sticks are now put after TNT minecarts
Recipes
• Added Bleached Chalk Stick Recipe!






V1.1.0
Code Changes
• Refactored Code and Packages