@@ -1,2 +1,2 @@
-// 1.21	2024-08-02T13:37:27.4415953	Languages: en_us for mod: arts_and_crafts
-db42c6a877902c2b5a478980d95c3f1576ca99cf assets/arts_and_crafts/lang/en_us.json
+// 1.21	2024-09-21T22:03:51.5846315	Languages: en_us for mod: arts_and_crafts
+b3bd6694637046d805b3b748e690250c359c3a82 assets/arts_and_crafts/lang/en_us.json
