@@ -1,34 +1,0 @@
-{
-  "variants": {
-    "facing=east,plank=false": {
-      "model": "arts_and_crafts:block/crimson_hanging_flower_pot",
-      "y": 270
-    },
-    "facing=east,plank=true": {
-      "model": "arts_and_crafts:block/crimson_hanging_flower_pot_with_plank",
-      "y": 270
-    },
-    "facing=north,plank=false": {
-      "model": "arts_and_crafts:block/crimson_hanging_flower_pot",
-      "y": 180
-    },
-    "facing=north,plank=true": {
-      "model": "arts_and_crafts:block/crimson_hanging_flower_pot_with_plank",
-      "y": 180
-    },
-    "facing=south,plank=false": {
-      "model": "arts_and_crafts:block/crimson_hanging_flower_pot"
-    },
-    "facing=south,plank=true": {
-      "model": "arts_and_crafts:block/crimson_hanging_flower_pot_with_plank"
-    },
-    "facing=west,plank=false": {
-      "model": "arts_and_crafts:block/crimson_hanging_flower_pot",
-      "y": 90
-    },
-    "facing=west,plank=true": {
-      "model": "arts_and_crafts:block/crimson_hanging_flower_pot_with_plank",
-      "y": 90
-    }
-  }
-}
