@@ -115,7 +115,6 @@
   "block.arts_and_crafts.cork_stairs": "Cork Stairs",
   "block.arts_and_crafts.cork_trapdoor": "Cork Trapdoor",
   "block.arts_and_crafts.cork_wood": "Cork Wood",
-  "block.arts_and_crafts.crimson_hanging_flower_pot": "Crimson Hanging Flower Pot",
   "block.arts_and_crafts.cyan_chalk": "Cyan Chalk",
   "block.arts_and_crafts.cyan_chalk_dust": "Cyan Chalk Dust",
   "block.arts_and_crafts.cyan_decorated_pot": "Cyan Decorated Pot",
