@@ -1,21 +1,0 @@
-{
-  "type": "minecraft:block",
-  "pools": [
-    {
-      "bonus_rolls": 0.0,
-      "conditions": [
-        {
-          "condition": "minecraft:survives_explosion"
-        }
-      ],
-      "entries": [
-        {
-          "type": "minecraft:item",
-          "name": "arts_and_crafts:crimson_hanging_flower_pot"
-        }
-      ],
-      "rolls": 1.0
-    }
-  ],
-  "random_sequence": "arts_and_crafts:blocks/crimson_hanging_flower_pot"
-}
