@@ -2,7 +2,7 @@
 # Every field you add must be added to the root build.gradle expandProps map.
 
 # Project
-version=1.1.8
+version=1.1.9
 group=com.kekecreations.arts_and_crafts
 java_version=21
 
@@ -21,7 +21,7 @@ fabric_version=0.100.1+1.21
 fabric_loader_version=0.15.11
 
 # NeoForge
-neoforge_version=21.0.113-beta
+neoforge_version=21.0.167
 neoforge_loader_version_range=[4,)
 
 # Gradle
